# pjo

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/pjo/: Encoder.py  Parser.py  Value.py  __init__.py  test.json
tests/: test_encoder.py
