[build-system] 
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "pjo"
version = "0.0.1"
authors = [
  { name="james kroner", email="notmyrealemail@fakedomain.com" },
]
description = "A python port of Jo!"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jbkroner/pjo"
"Bug Tracker" = "https://github.com/jbkroner/pjo/issues"

[project.scripts]
pjo = "pjo:main"
